# grafana-loki

./: .env.example  .gitignore  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml
grafana-provisioning/datasources/: datasource.yaml
loki-config/: loki-config.yaml
promtail-config/: promtail-config.yaml
